# rust-az-function-app-cosmos-db

./: .funcignore  .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs
src/app/: app_config.rs  app_insights.rs  function_handler.rs
