[package]
name = "rs-function-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
axum-insights = "0.6.2"
azure_core = "0.22.0"
azure_data_cosmos = "0.22.0"
azure_identity = "0.22.0"
clap = { version = "4.5.37", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.31"
openssl = { version = "0.10.72", features = ["vendored"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
